# astroberry-server-wiz

./: .gitignore  Makefile.am  README.md  configure.ac
data/: Makefile.am  astroberry-server-wiz.ui  astroberry.desktop.in
debian/: changelog  control  copyright
po/: POTFILES.in  en_GB.po
src/: Makefile.am  astroberry-server-wiz.c
